--- a/index.html
+++ b/index.html
@@ -38,7 +38,27 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src=".as"
+            <img src="./assets/profile-pic.png" alt="Esteban Roa profile pictura"/>
+            <! imagen personal.
+        </div>
+        <div class="section__text">
+             <p class="section__text__p1">Hello, I'm</p>
+             <h1 class="title">Esteban Roa</h1>
+             <p class="section__text__p2">Trainee of the Software Analysis and Development (ADSO) training program. Guided by SENA</p>
+            <div class="btn-container">
+                <button class="btn btn-color2" onclick="window.open('./assets/')">Download CV</button>
+                <! pdf de CV personal.
+                <button class="btn btn-color1" onclick="location.href='./#contact'">Contact Info</button>
+            </div>
+            <div id="socials-container">
+                <img
+                    src="./assets/linkedin.png"
+                    alt="My LinkedIn profile"
+                    class="icon"
+                    onclick="location.href='https://linkedin.com/'"
+                /> <! link del linkedin personal.
+
+            </div>
         </div>
     </section>
 </body>
