--- a/index.html
+++ b/index.html
@@ -57,9 +57,15 @@
                     class="icon"
                     onclick="location.href='https://linkedin.com/'"
                 /> <! link del linkedin personal.
-
+                <img
+                    src="./assets/github.png"
+                    alt="My Github profile"
+                    class="icon"
+                    onclick="location.href='https://github.com"
+                /> <! link del github personal.
             </div>
         </div>
     </section>
+    
 </body>
 </html>
