--- a/index.html
+++ b/index.html
@@ -1,71 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portafolio</title>
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="stylesheet" href="mediaqueries.css"/>
-</head>
-<body>
-    <nav id="desktop-nav">
-        <div class="logo">Esteban Roa</div>
-        <div>
-            <ul class="nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
-    <nav id="hamburguer-nav">
-        <div class="logo">Esteban Roa</div>
-        <div class="hamburguer-menu">
-            <div class="hamburguer-icon" onclick="toggleMenu()">
-                <span></span>
-                <span></span>
-                <span></span>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>My Portafolio</title>
+        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="mediaqueries.css"/>
+    </head>
+    <body>
+        <nav id="desktop-nav">
+            <div class="logo">Esteban Roa</div>
+            <div>
+                <ul class="nav-links">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
             </div>
-            <div class="menu-links">
-                <li><a href="#about" onclick="toggleMenu()">About</a></li>
-                <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-                <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-                <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+        </nav>
+        <nav id="hamburguer-nav">
+            <div class="logo">Esteban Roa</div>
+            <div class="hamburguer-menu">
+                <div class="hamburguer-icon" onclick="toggleMenu()">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="menu-links">
+                    <li><a href="#about" onclick="toggleMenu()">About</a></li>
+                    <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+                    <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+                    <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+                </div>
             </div>
-        </div>
-    </nav>
-    <section id="profile">
-        <div class="section__pic-container">
-            <img src="./assets/profile-pic.png" alt="Esteban Roa profile pictura"/>
-            <! imagen personal.
-        </div>
-        <div class="section__text">
-             <p class="section__text__p1">Hello, I'm</p>
-             <h1 class="title">Esteban Roa</h1>
-             <p class="section__text__p2">Trainee of the Software Analysis and Development (ADSO) training program. Guided by SENA</p>
-            <div class="btn-container">
-                <button class="btn btn-color2" onclick="window.open('./assets/')">Download CV</button>
-                <! pdf de CV personal.
-                <button class="btn btn-color1" onclick="location.href='./#contact'">Contact Info</button>
+        </nav>
+        <section id="profile">
+            <div class="section__pic-container">
+                <img src="./assets/profile-pic.png" alt="Esteban Roa profile pictura"/>
+                <! imagen personal.
             </div>
-            <div id="socials-container">
-                <img
-                    src="./assets/linkedin.png"
-                    alt="My LinkedIn profile"
-                    class="icon"
-                    onclick="location.href='https://linkedin.com/'"
-                /> <! link del linkedin personal.
-                <img
-                    src="./assets/github.png"
-                    alt="My Github profile"
-                    class="icon"
-                    onclick="location.href='https://github.com"
-                /> <! link del github personal.
+            <div class="section__text">
+                <p class="section__text__p1">Hello, I'm</p>
+                <h1 class="title">Esteban Roa</h1>
+                <p class="section__text__p2">Trainee of the Software Analysis and Development (ADSO) training program. Guided by SENA</p>
+                <div class="btn-container">
+                    <button class="btn btn-color2" onclick="window.open('./assets/')">Download CV</button>
+                    <! pdf de CV personal.
+                    <button class="btn btn-color1" onclick="location.href='./#contact'">Contact Info</button>
+                </div>
+                <div id="socials-container">
+                    <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon" onclick="location.href='https://linkedin.com/'"/>
+                    <! link del linkedin personal.
+                    <img src="./assets/github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com"/>
+                    <! link del github personal.
+                </div>
             </div>
-        </div>
-    </section>
-    
-</body>
+        </section>
+        <section id="about">
+            <p class="section__text__p1">Get To Know More</p>
+            <h1 class="title">About Me</h1>
+            <div class="section-container">
+                <div class="section__pic-container">
+                    <img src="./assets/about-pic.png" alt="Profile picture" class="abput-pic"/>
+                </div>
+                <div class="about-details-container">
+                    <div class="about-containers">
+                        <div class="details-container">
+                            <img src="./assets/experience.png" alt="Experience icon" class="icon"/>
+                            <h3>Experience</h3>
+                            <p>6+ months <br />Frontend Development</p>
+                        </div>
+                        <div class="details-container">
+                            <img src="./assets/education.png" alt="Education icon" class="icon"/>
+                            <h3>Education</h3>
+                            <p>Technical bachelor<br />System technique</p>
+                        </div>
+                    </div>
+                    <div class="text-container">
+                        <p>
+                            <! Texto donde se hable un poco de mi.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'"/>
+        </section>    
+    </body>
 </html>
