--- a/index.html
+++ b/index.html
@@ -141,5 +141,25 @@
             </div>
             <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'"/>
         </section>
+        <section id="Projects">
+            <p class="section__text__p1">Browse My Recent</p>
+            <h1 class="title">Projects</h1>
+            <div class="experience-details-container">
+                <div class="about-containers">
+                    <div class="details-container color-container">
+                        <div class="article-container">
+                            <img src="./assets/project-1.png" alt="project-1" class="project.img"/>
+                        </div>
+                        <h2 class="experience-sub-title project-title">Project One</h2>
+                        <div class="btn-container">
+                            <button class="btn btn-color-2 project btn" onclick="location.href='https://github.com'">
+                            
+                            </button>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
     </body>
 </html>
