Finalización del index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h1 class="title">Esteban Roa</h1>
                 <p class="section__text__p2">Trainee of the Software Analysis and Development (ADSO) training program. Guided by SENA</p>
                 <div class="btn-container">
-                    <button class="btn btn-color2" onclick="window.open('./assets/')">Download CV</button>
+                    <button class="btn btn-color2" onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
                     <! pdf de CV personal.
                     <button class="btn btn-color1" onclick="location.href='./#contact'">Contact Info</button>
                 </div>
@@ -149,17 +149,67 @@
                     <div class="details-container color-container">
                         <div class="article-container">
                             <img src="./assets/project-1.png" alt="project-1" class="project.img"/>
+                            <! Insertar una imgaen de mi proyecto 1 (My Portafolio)
                         </div>
                         <h2 class="experience-sub-title project-title">Project One</h2>
                         <div class="btn-container">
-                            <button class="btn btn-color-2 project btn" onclick="location.href='https://github.com'">
-                            
-                            </button>
+                            <button class="btn btn-color-2 project btn" onclick="location.href='https://github.com'">Github</button>
+                            <! Link de mi primer proyecto (Mi Portafolio)
+                            <button class="btn btn-color-2 project-btn" onclick="location.href'https://github.com'">Live Demo</button>
+                            <! Link de mi primer proyecto (Mi Portafolio)
                         </div>
                     </div>
-                    
+                    <div class="details-cotainer color-container">
+                        <div class="article-container">
+                            <img src="./assets/project-2.png" alt="Project 2" class="project-img"/>
+                        </div>
+                        <h2 class="experience-sub-title project-title">Project Two</h2>
+                        <div class="btn-container">
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Github</button>
+                            <! Link de mi segundo proyecto (ECoCo)
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Live Demo</button>
+                            <! Link de mi segundo proyecto (ECoCo)
+                        </div>
+                    </div>
+                    <div class="details-container color-container">
+                        <div class="article-container">
+                            <img src="./assets/project-3.png" alt="Project 3" class="project img"/>
+                        </div>
+                        <h2 class="experience-sub-title project-title">Project Three</h2>
+                        <div class="btn-container">
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Github</button>
+                            <! Link de mi tercer proyecto (Desconocido)
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Live Demo</button>
+                            <! Link de mi tercer proyecto (Desconocido)
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'"/>
+        </section>
+        <section id="contact">
+            <p class="section__text__p1">Get in Touch</p>
+            <h1 class="title">Contact Me</h1>
+            <div class="contact-info-upper-container">
+                <div class="contact-info-container">
+                    <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon"/>
+                    <p><a href="https://www.linkedin.com">Linkedin</a></p>
                 </div>
             </div>
         </section>
+        <footer>
+            <nav>
+                <div class="nav-links-container">
+                    <ul class="nav-links">
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#experience">Experience</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <p>Copyright &#169; 2023 Esteban Roa. All Rights Reserved.</p>
+        </footer>
+        <script src="script.js"></script>
     </body>
 </html>
