Finalización del style.css

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
                 <div class="contact-info-container">
                     <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon"/>
                     <p><a href="https://www.linkedin.com">Linkedin</a></p>
+                    <! Insertar el link de mi Linkedin personal.
                 </div>
             </div>
         </section>
