--- a/index.html
+++ b/index.html
@@ -51,10 +51,8 @@
                     <button class="btn btn-color1" onclick="location.href='./#contact'">Contact Info</button>
                 </div>
                 <div id="socials-container">
-                    <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon" onclick="location.href='https://linkedin.com/'"/>
-                    <! link del linkedin personal.
-                    <img src="./assets/github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com"/>
-                    <! link del github personal.
+                    <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon" onclick="location.href='https://www.linkedin.com/in/esteban-roa-quimbaya-40547926a/'"/>
+                    <img src="./assets/github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com/EstebanR054'"/>
                 </div>
             </div>
         </section>
@@ -80,7 +78,11 @@
                     </div>
                     <div class="text-container">
                         <p>
-                            <! Texto donde se hable un poco de mi.
+                            Soy un tecnólogo en Análisis y Desarrollo de Software-ADSO altamente motivado y apasionado por el desarrollo de aplicaciones web y móviles. Con una sólida experiencia en el campo, tengo habilidades avanzadas en el manejo de lenguajes de programación como Java, JavaScript y Python, y en el uso de tecnologías como React, Angular y Node.js. Además, poseo conocimientos sólidos en bases de datos relacionales y no relacionales, y en la implementación de APIs RESTful.
+
+Mi experiencia laboral y académica me ha brindado la oportunidad de desarrollar habilidades sociales y de liderazgo, lo que me ha permitido trabajar de manera efectiva en equipo y liderar proyectos exitosos. Soy una persona proactiva, creativa y apasionada por el aprendizaje continuo y la mejora constante.
+
+Además, estoy comprometido con el desarrollo de soluciones de software de alta calidad y el cumplimiento de los objetivos y requisitos de los clientes. Estoy seguro de que mi experiencia y habilidades técnicas, combinadas con mi enfoque orientado al cliente, me convierten en un profesional altamente valioso en cualquier equipo de desarrollo de software.
                         </p>
                     </div>
                 </div>
@@ -153,10 +155,8 @@
                         </div>
                         <h2 class="experience-sub-title project-title">Project One</h2>
                         <div class="btn-container">
-                            <button class="btn btn-color-2 project btn" onclick="location.href='https://github.com'">Github</button>
-                            <! Link de mi primer proyecto (Mi Portafolio)
-                            <button class="btn btn-color-2 project-btn" onclick="location.href'https://github.com'">Live Demo</button>
-                            <! Link de mi primer proyecto (Mi Portafolio)
+                            <button class="btn btn-color-2 project btn" onclick="location.href='https://github.com/EstebanR054/portafolio-esteban_roa_quimbaya.git'">Github</button>
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/EstebanR054/portafolio-esteban_roa_quimbaya.git'">Live Demo</button>
                         </div>
                     </div>
                     <div class="details-cotainer color-container">
@@ -193,8 +193,7 @@
             <div class="contact-info-upper-container">
                 <div class="contact-info-container">
                     <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon"/>
-                    <p><a href="https://www.linkedin.com">Linkedin</a></p>
-                    <! Insertar el link de mi Linkedin personal.
+                    <p><a href="https://www.linkedin.com/in/esteban-roa-quimbaya-40547926a/">Linkedin</a></p>
                 </div>
             </div>
         </section>
