--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         <section id="profile">
             <div class="section__pic-container">
                 <img src="./assets/profile-pic.png" alt="Esteban Roa profile pictura"/>
-                <! imagen personal.
             </div>
             <div class="section__text">
                 <p class="section__text__p1">Hello, I'm</p>
@@ -47,8 +46,7 @@
                 <p class="section__text__p2">Trainee of the Software Analysis and Development (ADSO) training program. Guided by SENA</p>
                 <div class="btn-container">
                     <button class="btn btn-color2" onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
-                    <! pdf de CV personal.
-                    <button class="btn btn-color1" onclick="location.href='./#contact'">Contact Info</button>
+                    <button class="btn btn-color1" onclick="location.href='#contact'">Contact Info</button>
                 </div>
                 <div id="socials-container">
                     <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon" onclick="location.href='https://www.linkedin.com/in/esteban-roa-quimbaya-40547926a/'"/>
@@ -143,20 +141,19 @@ Además, estoy comprometido con el desarrollo de soluciones de software de alta 
             </div>
             <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'"/>
         </section>
-        <section id="Projects">
+        <section id="projects">
             <p class="section__text__p1">Browse My Recent</p>
             <h1 class="title">Projects</h1>
             <div class="experience-details-container">
                 <div class="about-containers">
                     <div class="details-container color-container">
                         <div class="article-container">
-                            <img src="./assets/project-1.png" alt="project-1" class="project.img"/>
-                            <! Insertar una imgaen de mi proyecto 1 (My Portafolio)
+                            <img src="./assets/project-1.png" alt="Project 1" class="project-img"/>
                         </div>
                         <h2 class="experience-sub-title project-title">Project One</h2>
                         <div class="btn-container">
                             <button class="btn btn-color-2 project btn" onclick="location.href='https://github.com/EstebanR054/portafolio-esteban_roa_quimbaya.git'">Github</button>
-                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/EstebanR054/portafolio-esteban_roa_quimbaya.git'">Live Demo</button>
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://estebanr054.github.io/portafolio-esteban_roa_quimbaya/'">Live Demo</button>
                         </div>
                     </div>
                     <div class="details-cotainer color-container">
@@ -166,9 +163,7 @@ Además, estoy comprometido con el desarrollo de soluciones de software de alta 
                         <h2 class="experience-sub-title project-title">Project Two</h2>
                         <div class="btn-container">
                             <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Github</button>
-                            <! Link de mi segundo proyecto (ECoCo)
                             <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Live Demo</button>
-                            <! Link de mi segundo proyecto (ECoCo)
                         </div>
                     </div>
                 </div>
