--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h1 class="title">About Me</h1>
             <div class="section-container">
                 <div class="section__pic-container">
-                    <img src="./assets/about-pic.png" alt="Profile picture" class="abput-pic"/>
+                    <img src="./assets/about-pic.png" alt="Profile picture" class="about-pic"/>
                 </div>
                 <div class="about-details-container">
                     <div class="about-containers">
@@ -85,11 +85,11 @@ Además, estoy comprometido con el desarrollo de soluciones de software de alta 
                     </div>
                 </div>
             </div>
-            <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'"/>
+            <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='#experience'"/>
         </section>
         <section id="experience">
-            <p class="setion__text__p1">Explore My</p>
-            <h1 class="title">Experience</h1>
+            <p class="section__text__p1">Explore My</p>
+            <h1 class="title">Skills</h1>
             <div class="experience-details-container">
                 <div class="about-containers">
                     <div class="details-container">
@@ -139,7 +139,7 @@ Además, estoy comprometido con el desarrollo de soluciones de software de alta 
                     </div>
                 </div>
             </div>
-            <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'"/>
+            <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='#projects'"/>
         </section>
         <section id="projects">
             <p class="section__text__p1">Browse My Recent</p>
@@ -152,11 +152,11 @@ Además, estoy comprometido con el desarrollo de soluciones de software de alta 
                         </div>
                         <h2 class="experience-sub-title project-title">Project One</h2>
                         <div class="btn-container">
-                            <button class="btn btn-color-2 project btn" onclick="location.href='https://github.com/EstebanR054/portafolio-esteban_roa_quimbaya.git'">Github</button>
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/EstebanR054/portafolio-esteban_roa_quimbaya.git'">Github</button>
                             <button class="btn btn-color-2 project-btn" onclick="location.href='https://estebanr054.github.io/portafolio-esteban_roa_quimbaya/'">Live Demo</button>
                         </div>
                     </div>
-                    <div class="details-cotainer color-container">
+                    <div class="details-container color-container">
                         <div class="article-container">
                             <img src="./assets/project-2.png" alt="Project 2" class="project-img"/>
                         </div>
@@ -168,7 +168,7 @@ Además, estoy comprometido con el desarrollo de soluciones de software de alta 
                     </div>
                 </div>
             </div>
-            <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'"/>
+            <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='#contact'"/>
         </section>
         <section id="contact">
             <p class="section__text__p1">Get in Touch</p>
@@ -176,6 +176,10 @@ Además, estoy comprometido con el desarrollo de soluciones de software de alta 
             <div class="contact-info-upper-container">
                 <div class="contact-info-container">
                     <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon"/>
+                    <p><a href="estroaquim@gmail.com">estroaquim@gmail.com</a></p>
+                </div>
+                <div class="contact-info-container">
+                    <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon"/>
                     <p><a href="https://www.linkedin.com/in/esteban-roa-quimbaya-40547926a/">Linkedin</a></p>
                 </div>
             </div>
