--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         </nav>
         <section id="profile">
             <div class="section__pic-container">
-                <img src="./assets/profile-pic.png" alt="Esteban Roa profile pictura"/>
+                <img src="./assets/Foto personal 1.jpg" alt="Esteban Roa profile pictura"/>
             </div>
             <div class="section__text">
                 <p class="section__text__p1">Hello, I'm</p>
                 <h1 class="title">Esteban Roa</h1>
                 <p class="section__text__p2">Trainee of the Software Analysis and Development (ADSO) training program. Guided by SENA</p>
                 <div class="btn-container">
-                    <button class="btn btn-color2" onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
+                    <button class="btn btn-color2" onclick="window.open('./assets/CV.pdf')">Download CV</button>
                     <button class="btn btn-color1" onclick="location.href='#contact'">Contact Info</button>
                 </div>
                 <div id="socials-container">
@@ -76,11 +76,11 @@
                     </div>
                     <div class="text-container">
                         <p>
-                            Soy un tecnólogo en Análisis y Desarrollo de Software-ADSO altamente motivado y apasionado por el desarrollo de aplicaciones web y móviles. Con una sólida experiencia en el campo, tengo habilidades avanzadas en el manejo de lenguajes de programación como Java, JavaScript y Python, y en el uso de tecnologías como React, Angular y Node.js. Además, poseo conocimientos sólidos en bases de datos relacionales y no relacionales, y en la implementación de APIs RESTful.
-
-Mi experiencia laboral y académica me ha brindado la oportunidad de desarrollar habilidades sociales y de liderazgo, lo que me ha permitido trabajar de manera efectiva en equipo y liderar proyectos exitosos. Soy una persona proactiva, creativa y apasionada por el aprendizaje continuo y la mejora constante.
-
-Además, estoy comprometido con el desarrollo de soluciones de software de alta calidad y el cumplimiento de los objetivos y requisitos de los clientes. Estoy seguro de que mi experiencia y habilidades técnicas, combinadas con mi enfoque orientado al cliente, me convierten en un profesional altamente valioso en cualquier equipo de desarrollo de software.
+                            I am a highly motivated Software Analysis and Development-ADSO technologist with a passion for web and mobile application development. With solid experience in the field, I have advanced skills in handling programming languages ​​​​such as Java,
+                            JavaScript and Python, and in the use of technologies such as React, Angular and Node.js. In addition, he has solid knowledge in relational and non-relational databases, and in the implementation of RESTful APIs.
+                            My work and academic experience has given me the opportunity to develop social and leadership skills, which has allowed me to work effectively in a team and lead successful projects. I am a proactive, creative person and passionate about
+                            continuous learning and constant improvement. Additionally, I am committed to developing high-quality software solutions and meeting client objectives and requirements. I am confident that my experience and skills, combined with my
+                            client-oriented approach, make me a highly valuable professional on any software development team.
                         </p>
                     </div>
                 </div>
