--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
         <section id="profile">
             <div class="section__pic-container">
-                <img src="./assets/Foto personal 1.jpg" alt="Esteban Roa profile pictura"/>
+                <img src="./assets/Foto personal 1.png" alt="Esteban Roa profile pictura"/>
             </div>
             <div class="section__text">
                 <p class="section__text__p1">Hello, I'm</p>
